--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </li>
         </ul>
         <form class="d-flex align-items-center" role="search">
-          <h6 class="text-white mb-0">Hi,User!</h6>
+          <h6 class="text-white mb-0">Hi,<span id="user"></span>!</h6>
         </form>
       </div>
     </div>
@@ -60,7 +60,7 @@
                   </div>
                   <div class="d-grid gap-2 col-6 mx-auto mt-3">
                     <button class="btn btn-danger" type="submit" id="addTask">Add Task</button>
-                    <button class="btn btn-danger update" type="submit" id="updateTask">Update Task</button>
+                    <button class="btn btn-danger update" type="submit" id="updateTask" >Update Task</button>
                   </div>
                 </div>
               </form>
